resources/sass/app.scss
//--------------------------------------
// Bootstrap
//--------------------------------------

@import '~bootstrap/scss/functions';
@import '~bootstrap/scss/variables';

$code-color: #000;
$grid-gutter-width: 1.5rem; // Matches .m-4
$modal-xl: 97vw;
$text-muted: $gray-500;

@import '~bootstrap/scss/mixins';
@import '~bootstrap/scss/root';
@import '~bootstrap/scss/reboot';
@import '~bootstrap/scss/type';
//@import '~bootstrap/scss/images';
//@import '~bootstrap/scss/code';
@import '~bootstrap/scss/grid';
@import '~bootstrap/scss/tables';
//@import '~bootstrap/scss/forms';
@import '~bootstrap/scss/buttons';
@import '~bootstrap/scss/transitions';
@import '~bootstrap/scss/dropdown';
@import '~bootstrap/scss/button-group';
//@import '~bootstrap/scss/input-group';
//@import '~bootstrap/scss/custom-forms';
//@import '~bootstrap/scss/nav';
@import '~bootstrap/scss/navbar';
@import '~bootstrap/scss/card';
//@import '~bootstrap/scss/breadcrumb';
@import '~bootstrap/scss/pagination';
@import '~bootstrap/scss/badge';
//@import '~bootstrap/scss/jumbotron';
//@import '~bootstrap/scss/alert';
//@import '~bootstrap/scss/progress';
//@import '~bootstrap/scss/media';
//@import '~bootstrap/scss/list-group';
@import '~bootstrap/scss/close';
@import '~bootstrap/scss/toasts';
@import '~bootstrap/scss/modal';
@import '~bootstrap/scss/tooltip';
//@import '~bootstrap/scss/popover';
//@import '~bootstrap/scss/carousel';
//@import '~bootstrap/scss/spinners';
@import '~bootstrap/scss/utilities';
//@import '~bootstrap/scss/print';


//--------------------------------------
// BootstrapVue
//--------------------------------------

@import '~bootstrap-vue';


//--------------------------------------
// Highlight.js
//--------------------------------------

@import '~highlight.js/styles/tomorrow-night-bright.css';


//--------------------------------------
// Custom
//--------------------------------------

html {
    // Always show scrollbar
    overflow-y: scroll;
}

.loading {
    @extend .display-4;
    @extend .text-muted;
    align-items: center;
    display: flex;
    height: 100%;
    justify-content: center;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%; // Not 100vw because that overlaps the scrollbar
    z-index: 0;
}

.row {
    // Make the left/right margins equal to the gutter widths
    margin-left: 0;
    margin-right: 0;
}

h6,
.h6 {
    font-weight: 600;
}

.btn-group > .btn.dropdown-toggle:not(:first-child),
.btn-group > .btn-group:not(:first-child) > .btn.dropdown-toggle {
    // Make split buttons actually appear split
    border-left: 1px solid rgba(0, 0, 0, 0.1);
    // And make them work when the group has a fixed width
    flex-grow: 0;
}

.table thead tr {
    background: $light;
}

.table thead th {
    color: $gray-600;
    font-weight: normal;
    text-transform: uppercase;
    vertical-align: middle;
}

.table thead th .btn,
.table thead th .btn-group {
    text-transform: none;
}

.tooltip-inner {
    // Make tooltips bigger to accommodate long filenames
    max-width: 600px;
}

.pre-wrap {
    white-space: pre-wrap;
}

.page-footer {
    position: absolute;
    bottom: 0;
    padding: 5px 15px;
}

